<resources>
    <string name="app_name">FinanceWise</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finwise">FinWise</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_sign_up_with">or sign up with?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="facebook_sign_in">Facebook Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="welcome">Welcome</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="term_of_use">By continuing, you agree to \nTerms of Use and Privacy Policy.</string>
    <string name="expense">Expense</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>

    <string name="select_category">Select Category</string>
    <string name="transaction">Transaction</string>
    <string name="total_balance">Total Balance</string>
    <string name="income">Income</string>
    <string name="add_button">Add Button</string>
    <string name="calender_button">Calender Button</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="_0_00">$0.00</string>
    <string name="transaction_title">Transaction Title</string>
    <string name="enter_title">Enter title</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter description</string>
    <string name="save">Save</string>
    <string name="april_30_2024">April 30, 2024</string>
    <string name="hi_welcome_back">Hi, Welcome Back</string>
    <string name="total_expensive">Total Expensive</string>
    <string name="_30_of_your_expensive_look_good">30% Of Your Expensive, Look good</string>
    <string name="savings_on_goals">Savings On Goals</string>
    <string name="revenue_this_month">Revenue This Month</string>
    <string name="food_last_week">Food Last Week</string>
    <string name="welcome_to_nexpense_manager">Welcome to \nExpense Manager</string>
    <string name="next">Next</string>
    <string name="are_you_ready_to_n_take_control_of_n_your_finances">Are you ready to \n take control of \n your finances?</string>
    <string name="year">Year</string>
    <string name="my_targets">My Targets</string>
    <string name="income_amp_expenses"><![CDATA[Income & Expenses]]></string>
    <string name="analysis">Analysis</string>
    <string name="search">Search</string>
    <string name="food">Food</string>
    <string name="categories">Categories</string>
    <string name="entertainment">Entertainment</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="security">Security</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="john_smith">John Smith</string>
    <string name="username">Username</string>
    <string name="truong040104_gmail_com">truong040104@gmail.com</string>
    <string name="_0868674213">0868674213</string>
    <string name="add_saving">Add Saving</string>
    <string name="travel">Travel</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="add_more">Add More</string>
    <string name="no_transactions_available">No transactions available</string>
    <string name="notification">notification</string>
    <string name="back">back</string>
    <string name="home">Home</string>
    <string name="cancel">Cancel</string>
    <string name="write">Write..</string>
    <string name="new_category">New Category</string>
    <string name="goal">Goal</string>
    <string name="amount_saved">Amount Saved</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="yes_end_session">Yes, End Session</string>
    <string name="end_session">End Session</string>
    <string-array name="category_array">
        <item>Food</item>
        <item>Medicine</item>
        <item>Transport</item>
        <item>Groceries</item>
        <item>Salary</item>
        <item>Rent</item>
        <item>Entertainment</item>
        <item>Gift</item>
        <item>Other</item>
    </string-array>
    <string-array name="saving_array">
        <item>Travel</item>
        <item>Car</item>
        <item>House</item>
        <item>Wedding</item>
    </string-array>
</resources>