<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/app_intro_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="80dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="32sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="22dp"
            android:gravity="center_horizontal"
            android:background="@drawable/rounded_green_white_background">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:background="@drawable/edittext_round_background" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/edittext_round_background" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:background="@drawable/edittext_round_background" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:endIconCheckable="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@drawable/edittext_round_background" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/confirm_password"
                app:endIconMode="password_toggle"
                app:endIconCheckable="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@drawable/edittext_round_background" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/term_of_use_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/term_of_use"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textStyle="italic"
                android:textSize="15sp" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_light_green_background"
                />
            <View
                android:id="@+id/loader_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="visible"
                android:layout_marginBottom="10dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="20sp"
                android:backgroundTint="@color/main_green"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textAlignment="center"
                    android:textStyle="italic"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/login_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:focusable="true"
                    android:text="@string/login"
                    android:clickable="true"
                    android:textColor="@color/blue"
                    android:textAlignment="center"
                    android:textStyle="italic"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>