<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.transaction.TransactionFragment">

    <LinearLayout
        android:id="@+id/ll_header_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_green"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <ImageView
                android:id="@+id/tv_back_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/tv_category_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginEnd="43dp"
                android:gravity="center"
                android:text="@string/transaction"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_notification_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:contentDescription="@string/notification"
                android:focusable="true"
                android:src="@drawable/ic_notifications" />
        </LinearLayout>


            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/rounded_green_white_tvbg"
                android:padding="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/total_balance"/>

                <TextView
                    android:id="@+id/tv_total_balance_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="27sp" />
            </LinearLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="25dp"
            android:paddingBottom="10dp"
            android:layout_marginEnd="25dp">
            <LinearLayout
                android:id="@+id/ll_income"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rounded_green_white_tvbg">

                <ImageView
                    android:id="@+id/img_income"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/income"
                    android:src="@drawable/ic_income_main_green" />
                <TextView
                    android:id="@+id/tv_income"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/income"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tv_total_income"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="22sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_expense"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/rounded_green_white_tvbg">
                <ImageView
                    android:id="@+id/img_expense"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/expense"
                    android:src="@drawable/ic_expense_blue"/>

                <TextView
                    android:id="@+id/tv_expense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/expense"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_total_expense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/ocean_blue"
                    android:textSize="22sp" />
            </LinearLayout>
        </LinearLayout>


        <!-- Thay đổi ở đây: Sử dụng layout_weight để LinearLayout này chiếm hết không gian còn lại -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingTop="15dp"
            android:paddingBottom="0dp"
            android:background="@drawable/rounded_green_white_background"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp"
                android:gravity="right"
                tools:ignore="RtlHardcoded">

                <ImageView
                    android:id="@+id/add_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:clickable="true"
                    android:paddingTop="6dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:contentDescription="@string/add_button"
                    android:layout_marginEnd="5dp"
                    android:focusable="true"
                    android:src="@drawable/ic_add_main_green" />

                <ImageView
                    android:id="@+id/calender_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    android:clickable="true"
                    android:contentDescription="@string/calender_button"
                    android:focusable="true"
                    android:src="@drawable/ic_calender2" />
            </LinearLayout>

            <!-- RecyclerView sử dụng layout_weight để chiếm không gian còn lại -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_transaction_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="visible"
                android:layout_marginBottom="15dp"
                tools:ignore="NestedWeights" />
            <TextView
                android:id="@+id/tv_empty_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:textSize="20sp"
                android:text="@string/no_transactions_available"/>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>